# tree-sitter-rust

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-rust.wasm  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  lint.yml
bindings/c/: tree-sitter-rust.h  tree-sitter-rust.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rust/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRustTests/: TreeSitterRustTests.swift
corpus/: async.txt  declarations.txt  expressions.txt  literals.txt  macros.txt  patterns.txt  source_files.txt  types.txt
examples/: ast.rs  if_expressions.rs
queries/: highlights.scm  injections.scm  locals.scm  stack-graphs.tsg  tags.scm
script/: setup  test
src/: grammar.json  highlights.json  node-types.json  parser.c  scanner.c
stack-graph-tests/: Cargo.toml  block_items.rs  captured_pattern.rs  closure_expression.rs  hello-world.rs  lifetimes.rs  namespaces.rs  shadow.rs  shadow_generic.rs  struct_expression.rs  tuple_struct_pattern.rs  types.rs  use.rs
stack-graph-tests/multifile/: import_from_declared_mod.rs  import_from_super.rs  nested.rs  path_qualifier_super.rs  simple.rs  use_declaration.rs
test/corpus/: async.txt  declarations.txt  expressions.txt  literals.txt  macros.txt  patterns.txt  source_files.txt  types.txt
